Wired up some endpoints
